# metamodule-rarebreeds

./: .gitmodules  CMakeLists.txt  plugin-mm.json
metamodule-plugins/: Orbits.mmplugin
